2003-04-03: 0.3.0 - Hin-Tak Leung
   . Minor change to overflow work around, and bumped version up to 0.3.0.
	
2003-04-02: cvs - Hin-Tak Leung
   . Header/footer re-organization to add preliminary 6100L support. 
       Regression-tested 57/58/59 spool file generation.

2003-03-21: cvs - Roberto Ragusa
   . !!Changed parameter name!!:
        The "USB" parameter is now called "FlowControl".
   . FlowControl option added to foomatic (5700L only).
   . Fixed Density default (now 3 for 5700L/5800L too).

2003-03-18: cvs - Hin-Tak Leung
   . Updated flow-control timing code. Can do 20 pages via libusb now.
   . removed some over-verbose debug outputs, added page number output.
   . Added apsfilter contrib setup.

2003-03-13: cvs - Roberto Ragusa
   . Compilation options in epl_config.h.
   . Protocol changes to work around printer crashes.
   . Removed epsonepl-PrintoutMode.xml composite option.
   . Misc fixes.

2003-03-10: cvs - Roberto Ragusa
   . Modifications to the foomatic stuff and spec file.

2003-02-28: cvs - Hin-Tak Leung
   . Merged in USB-related code, 
        configure now accepts --with-kerneldevice,--with-libusb
   . documentation update regarding USB and the 4-bit code.
   * !!Changed behavior!!:
        reverting "USB=on" in ps2epl to "off", as there is now
        two ways of doing 5700L USB printing.

2003-02-05: 0.2.2 - Roberto Ragusa, Hin-Tak Leung
   . Maintainence update to 0.2, released as rpm.

2003-02-04: 0.2.1usb - Hin-Tak Leung
   . rpm's available for the first time
   . bundling PPD files and some e-mails from the mailing list with tips

2003-02-02: 4-bit codes - Roberto Ragusa
   . Meaning of the 4 bit codes finally discovered.
   . The 4 bit codes are now used.

2003-02-01: 0.2usb - Hin-Tak Leung
   . Printing to 5700L via USB now works. Added "USB=on/off" IjsParam.
   . Grafted a 2003-01-25 CVS snapshot of libusb plus minor customization.
   . Minor changes in various documentation.
   . Added minimal FAQ.
   * !!Changed behavior!!: 