@@ -28,6 +28,10 @@
       <driver>epl5900l</driver>
       <arg_defval>ev/1000</arg_defval>
      </constraint>
+     <constraint sense="true">
+      <driver>epl6100l</driver>
+      <arg_defval>ev/1000</arg_defval>
+     </constraint>
 -->
   </constraints>
   <enum_vals>
