@@ -27,6 +27,10 @@
       <driver>epl5900l</driver>
       <arg_defval>ev/1001</arg_defval>
      </constraint>
+     <constraint sense="true">
+      <driver>epl6100l</driver>
+      <arg_defval>ev/1001</arg_defval>
+     </constraint>
   </constraints>
   <enum_vals>
    <enum_val id="ev/1000">
