@@ -1,3 +1,6 @@
+2003-04-08: cvs - Roberto Ragusa
+   . Better foomatic support for 6100L.
+	
 2003-04-03: 0.3.0 - Hin-Tak Leung
    . Minor change to overflow work around, and bumped version up to 0.3.0.
 	
